--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,700;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,700;1,700&display=swap");
 
-*{
+* {
   font-family: "Space Mono";
   box-sizing: border-box;
 }
 
-body{
+body {
   margin: 0;
-  background-color: #C5E4E7;
+  background-color: #c5e4e7;
   display: flex;
+  justify-content: center;
+}
+p {
+  color: #5e7a7d;
 }
 
-#app{
-  width: 100vw;
-  height: 100vh;
+#app {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#logo{
+#logo {
   padding: 50px 0 40px;
 }
 
-#calculator{
-  
+#calculator {
   width: 100%;
+  max-width: 560px;
   height: 100%;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 32px;
-  border-radius: 25px 25px;
+  padding: 24px;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px;
 }
-
-#input-field{
+#calculator-inner {
   display: flex;
   flex-direction: column;
-  width: 311px;
+}
+
+#input-field {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
   position: relative;
 }
 
-#input-icon{
+#input-icon {
   position: absolute;
   bottom: 16px;
   left: 17px;
   height: 16px;
 }
-
-label{
-  font-size: 16px;
-  color: #5E7A7D;
+#helper-div {
+  display: flex;
   margin-bottom: 6px;
+  justify-content: space-between;
+}
+label {
+  font-size: 16px;
+  color: #5e7a7d;
 }
 
-input{
-  background-color: #F3F9FA;
-  border: solid 2px #F3F9FA;
+#warning {
+  font-size: 16px;
+  color: #e17457;
+}
+
+input {
+  background-color: #f3f9fa;
+  border: solid 2px #f3f9fa;
   border-radius: 5px;
   height: 48px;
   font-size: 24px;
@@ -65,13 +82,143 @@ input{
   text-align: right;
   cursor: pointer;
 }
-input:focus{
+input:focus {
   outline: none;
-  border-color: #26C2AE;
+  border-color: #26c2ae;
+}
+.wrong-input:focus {
+  border-color: #e17457;
 }
 
-.tip-option{
-  background-color: #00474B;
-  color: #FFFFFF;
+#grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 17px;
+  row-gap: 16px;
+}
+
+.tip-option {
+  background-color: #00474b;
+  color: #ffffff;
+  border: solid 1px #00474b;
   font-size: 24px;
+  border-radius: 5px;
+  transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
+}
+.tip-option:focus {
+  background-color: #26c2ae;
+  border-color: #26c2ae;
+  color: #00474b;
+  outline: none;
+}
+
+#custom-tip-option {
+  height: auto;
+  width: 100%;
+}
+
+#calculated-tip-div {
+  width: 100%;
+  height: 257px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: #00474b;
+  border-radius: 15px;
+  margin-top: 32px;
+  padding: 23px;
+}
+
+span {
+  color: #7f9d9f;
+  font-size: 13px;
+}
+
+.calculated-field {
+  display: flex;
+  justify-content: space-between;
+}
+.calculated-label-div {
+  display: flex;
+  flex-direction: column;
+}
+.calculated-label {
+  color: #ffffff;
+  font-size: 16px;
+}
+
+.calculated-amount {
+  color: #26c2ae;
+  font-size: 32px;
+}
+
+#reset-button {
+  box-sizing: border-box;
+  background-color: #26c2ae;
+  color: #00474b;
+  border: none;
+  width: 281px;
+  transition: background-color 0.25s;
+}
+#reset-button:active {
+  background-color: #9fe8df;
+  outline: none;
+}
+#reset-button:disabled {
+  background-color: #0d686d;
+  color: #00474b;
+}
+
+@media (min-width: 601px) {
+  #logo {
+    padding: 20px;
+  }
+  #calculator {
+    border-radius: 25px;
+    box-shadow: 0px 32px 43px 0px rgba(79, 166, 175, 0.2);
+  }
+}
+
+@media (min-width: 920px) {
+  #logo {
+    padding-bottom: 88px;
+  }
+  #calculator {
+    flex-direction: row;
+    justify-content: space-around;
+    width: 920px;
+    max-width: none;
+  }
+
+  #calculator-inner {
+    width: 379px;
+  }
+
+  #grid-container {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 14px;
+    row-gap: 16px;
+  }
+  .tip-option {
+    padding: 6px;
+  }
+  #custom-tip-option {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  #calculated-tip-div {
+    width: 413px;
+    height: 417px;
+  }
+
+  .calculated-amount {
+    font-size: 48px;
+  }
+
+  #reset-button {
+    width: 333px;
+    align-self: center;
+    font-size: 20px;
+  }
 }
