--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ p {
 }
 
 #app {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -28,7 +28,7 @@ p {
 }
 
 #calculator {
-  width: 100%;
+  width: calc(100% - 13px);
   max-width: 560px;
   height: 100%;
   background-color: #ffffff;
@@ -158,6 +158,7 @@ span {
   color: #00474b;
   border: none;
   width: 281px;
+  align-self: center;
   transition: background-color 0.25s;
 }
 #reset-button:active {
@@ -218,7 +219,6 @@ span {
 
   #reset-button {
     width: 333px;
-    align-self: center;
     font-size: 20px;
   }
 }
