--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,7 @@ input {
   background-color: #f3f9fa;
   border: solid 2px #f3f9fa;
   border-radius: 5px;
+  color: #000000;
   height: 48px;
   font-size: 24px;
   padding: 0 17px 0 17px;
